Podstrona do tworzenia posilków
Dodana podstrona do tworzenia posiłków

--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                         {
                         <li class="nav-item">
                           <a class="nav-link text-dark">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
+                        </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MakingDish" asp-action="Index">Stwórz swój posiłek</a>
                             </li>
                         }
                         else
