--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -29,21 +29,21 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
 
-                       @if (User.Identity.IsAuthenticated)
-                        {
-                        <li class="nav-item">
-                          <a class="nav-link text-dark">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
-                        </li>
-
+                       @if (User.Identity.IsAuthenticated){
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="MakingDish" asp-action="Index">Stwórz swój posiłek</a>
+                              <a class="nav-link text-dark">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
                             </li>
+                            <li class="nav-item">
+                                 <a class="nav-link text-dark" action="Logout">Wyloguj</a>
+                            </li>
+                            <li class="nav-item">
+                                 <a class="nav-link text-dark" asp-area="" asp-controller="MakingDish" asp-action="Index">Stwórz swój posiłek</a>
+                             </li>
                         }
-                        else
-                        {
-                                                    <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Zaloguj się</a>
-                        </li>
+                        else{
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Zaloguj się</a>
+                            </li>
                         }
                     </ul>
                 </div>
