--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -10,6 +10,23 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/projekt.styles.css" asp-append-version="true" />
+
+
+    <style>
+        .list {
+            display: none;
+            position: absolute;
+            background-color: white;
+            padding: 5px;
+            z-index: 1;
+        }
+
+        li:hover .list {
+            display: block;
+            
+        }
+    </style>
+
 </head>
 <body>
     <header>
@@ -36,8 +53,14 @@
                             <li class="nav-item">
                                  <a class="nav-link text-dark" action="Logout">Wyloguj</a>
                             </li>
-                            <li class="nav-item">
-                                 <a class="nav-link text-dark" asp-area="" asp-controller="MakingDish" asp-action="Index">Stwórz swój posiłek</a>
+
+                            <li class="nav-item" style="position: relative;">
+                                <a class="nav-link text-dark">Posiłki</a>
+                                <ul class="list">
+                                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="MyMeals">Posiłki</a></li>
+                                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="Products">Produkty</a></li>
+                                </ul>
+                                
                              </li>
                         }
                         else{
