wyświetlanie wszystkich dzisiejszych posiłków użytkowanika

--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 
                        @if (User.Identity.IsAuthenticated){
                             <li class="nav-item">
-                              <a class="nav-link text-dark">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
+                              <a class="nav-link text-dark" asp-controller="Account">@HttpContextAccessor.HttpContext.User.FindFirst(ClaimTypes.Name).Value</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Wyloguj</a>
