--- a/projekt/projekt/Views/Home/Privacy.cshtml
+++ b/projekt/projekt/Views/Home/Privacy.cshtml
@@ -3,4 +3,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Strona stwożona jako projekt na "programowanie obiektowe i graficzne" oraz "bazy danych" przez
+    <ul>
+        <li>Pawła Cykowskiego</li>
+        <li>Wojciecha Dziurosza</li>
+        <li>Bartosza Skurę</li>
+        <li>Pawła Wójcika</li>
+    </ul>
+</p>
