--- a/projekt/projekt/Views/Home/Index.cshtml
+++ b/projekt/projekt/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Fit4you</h1>
+    <p>aplikacja stworzona aby ułatwić liczenie kalorii i substancji odżywczych</p>
 </div>
