--- a/projekt/projekt/Views/Meals/Products.cshtml
+++ b/projekt/projekt/Views/Meals/Products.cshtml
@@ -1,7 +1,20 @@
 ﻿@model IEnumerable<projekt.Models.Produkt>
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Products";
+
+    Pager pager =new Pager(1141,1);
+    int pageNr = 0;
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNr = pager.CurrentPage;
+    }
+    else
+    {
+
+        @Html.ActionLink("","Index", new{pg=0})
+    }
 }
 
 <div class="container">
@@ -57,7 +70,19 @@
             </tbody>
         </table>
     </div>
-
+    <div class="pager">
+        @if (pager.TotalPages >= 0)
+        {
+            <ul class="pagination justify-content-end">
+                @for(var pg = pager.StartPage; pg <= pager.EndPage; pg++)
+                {
+                    <il class="page-item @(pg==pager.CurrentPage? "active":"")">
+                        <a class="page-link" asp-controller="Produkts" asp-action="Index" asp-route-pg="@pg">@pg</a>
+                    </il>
+                }
+            </ul>
+        }
+    </div>
 
    
 </div>
