--- a/projekt/projekt/Views/Meals/Products.cshtml
+++ b/projekt/projekt/Views/Meals/Products.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Products";
-
+    ViewBag.Controller = "Meals";
     Pager pager =new Pager();
     int pageNr = 0;
     if (ViewBag.Pager != null)
