--- a/projekt/projekt/Views/Shared/_pager.cshtml
+++ b/projekt/projekt/Views/Shared/_pager.cshtml
@@ -1,32 +1,32 @@
 ﻿@model projekt.Models.Pager
 
 <div class="pager">
-    @if (Model.TotalPages >= 0)
+    @if (Model.TotalPages > 0)
     {
         <ul class="pagination justify-content-end">
 
             @if (Model.CurrentPage > 1)
             {
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Meals" asp-action="Products" asp-route-pg="1">Pierwsza</a>
+                    <a class="page-link" asp-controller="@(ViewBag.Controller)" asp-action="@(ViewBag.Title)" asp-route-pg="1">Pierwsza</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Meals" asp-action="Products" asp-route-pg="@(Model.CurrentPage-1)">Poprzednia</a>
+                    <a class="page-link" asp-controller="@(ViewBag.Controller)" asp-action="@(ViewBag.Title)" asp-route-pg="@(Model.CurrentPage-1)">Poprzednia</a>
                 </li>
             }
             @for (var pg = Model.StartPage; pg <= Model.EndPage; pg++)
             {
                 <il class="page-item @(pg==Model.CurrentPage? "active":"")">
-                    <a class="page-link" asp-controller="Meals" asp-action="Products" asp-route-pg="@pg">@pg</a>
+                    <a class="page-link" asp-controller="@(ViewBag.Controller)" asp-action="@(ViewBag.Title)" asp-route-pg="@pg">@pg</a>
                 </il>
             }
             @if (Model.CurrentPage < Model.TotalPages)
             {
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Meals" asp-action="Products" asp-route-pg="@(Model.CurrentPage+1)">Następna</a>
+                    <a class="page-link" asp-controller="@(ViewBag.Controller)" asp-action="@(ViewBag.Title)" asp-route-pg="@(Model.CurrentPage+1)">Następna</a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" asp-controller="Meals" asp-action="Products" asp-route-pg="@(Model.TotalPages)">Ostatnia</a>
+                    <a class="page-link" asp-controller="@(ViewBag.Controller)" asp-action="@(ViewBag.Title)" asp-route-pg="@(Model.TotalPages)">Ostatnia</a>
                 </li>
             }
         </ul>
