--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
             display: block;
             
         }
+
+        ul {
+            list-style-type: none;
+        }
     </style>
 
 </head>
