--- a/projekt/projekt/Views/Account/Index.cshtml
+++ b/projekt/projekt/Views/Account/Index.cshtml
@@ -34,4 +34,29 @@
     </tbody>
 </table>
 <p> ilość dzisiejszych kalori: @kcal</p>
+    
+    <div>
+        @foreach (var konto in Model)
+        {
+            @foreach (var jadlo in konto?.Jadlospisy)
+            {
+                <p name="dzien">@jadlo.Dzień</p>
+            <form method="post" asp-controller="Date" asp-action="poprzedni">
+                    <input style="display:none" type="text" name="czas" value="@jadlo.Dzień" >
+                <button type="submit">poprzedni</button>
+                </form>
+                @if (jadlo.Dzień != DateOnly.FromDateTime(DateTime.Now))
+                {
+                <form method="post" asp-controller="Date" asp-action="nastepny">
+                    <input style="display:none" type="text" name="czas" value="@jadlo.Dzień">
+
+                    <button type="submit">nastepny</button>
+                </form>
+                }
+            break;
+
+            }
+        }
+    </div>
+
 <a asp-controller="UserMeals" asp-action="Index">zobacz wszytkie włąsne posiłki</a>
