--- a/projekt/projekt/Views/Shared/_Layout.cshtml
+++ b/projekt/projekt/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             <li class="nav-item" style="position: relative;">
                                 <a class="nav-link text-dark">Posiłki</a>
                                 <ul class="list">
-                                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="MyMeals">Posiłki</a></li>
+                                    <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="MyMeals">Moje</a></li>
                                     <li><a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="Products">Produkty</a></li>
                                 </ul>
                                 
