--- a/projekt/projekt/Views/UserMeals/AddExistingMeal.cshtml
+++ b/projekt/projekt/Views/UserMeals/AddExistingMeal.cshtml
@@ -2,16 +2,26 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 
 *@
+
 @model IEnumerable<Konto>
 @{
-    
+    TempData["czas"] = ViewData["id"].ToString();
 
 }
 <label for="Date">Data</label>
 <input disabled type="text" name="czas" value="@ViewData["id"]">
 @foreach (var konto in Model)
 {
-        <fieldset>
+    @if (konto?.Nazwa == ViewData["user"].ToString())
+    {
+        <p>twoj dania</p>
+    }
+    else
+    {
+        <p>dania innych</p>
+    }
+    <form method="post" asp-controller="UserMeals" asp-action="AddExistingMealPost">
+    <fieldset>
     @foreach (var jadlo in konto?.Jadlospisy)
     {
         
@@ -21,7 +31,7 @@
         @foreach (var dapro in jadlo?.Dania?.DaniaProdukty)
         {
                 <br />
-
+                    <input style="display:none" disabled type="text" name="czas" value="@ViewData["id"].ToString()">
                 @* <td>@jadlo.Dania.NazwaDania</td>*@
                 <span>@dapro.Produkty.Nazwa</span>
                 <span>@dapro.Produkty.Kaloryczność</span>
@@ -32,8 +42,9 @@
         }
           
 
-        <input style="display:none" value="@jadlo.Dania.Id">
-        <button>Wybierz</button>
+        <input style="display:none" name="danie" value="@jadlo.Dania.Id">
+                <button type="submit" >Wybierz</button>
     }
 </fieldset>
+    </form>
 }
